# nexus-cli

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  manifest
.beads/: config.yaml  metadata.json
src/: client.rs  lib.rs  main.rs
